feat: Add multiple screens

--- a/app.json
+++ b/app.json
@@ -67,7 +67,13 @@
           }
         }
       ],
-      "expo-font"
+      "expo-font",
+      "react-native-vision-camera",
+      {
+        "cameraPermissionText": "$(PRODUCT_NAME) needs access to your Camera.",
+        "enableMicrophonePermission": true,
+        "microphonePermissionText": "$(PRODUCT_NAME) needs access to your Microphone."
+      }
     ],
     "experiments": {
       "tsconfigPaths": true
