--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo": "^50.0.0",
     "expo-application": "~5.8.3",
     "expo-build-properties": "~0.11.0",
+    "expo-camera": "~14.1.3",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
@@ -59,7 +60,6 @@
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-vision-camera": "^3.9.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -72,7 +72,7 @@
     "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@expo/ngrok": "^2.5.0",
+    "@expo/ngrok": "^4.1.3",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "^29.2.1",
     "@types/react": "~18.2.14",
