--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^2.30.0",
     "expo": "^50.0.0",
     "expo-application": "~5.8.3",
+    "expo-av": "^13.10.6",
     "expo-build-properties": "~0.11.0",
     "expo-camera": "~14.1.3",
     "expo-font": "~11.10.2",
