--- a/app.json
+++ b/app.json
@@ -78,6 +78,9 @@
           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
           "recordAudioAndroid": true
         }
+      ],
+      [
+        "with-rn-image-crop-picker"
       ]
     ],
     "experiments": {
