--- a/package.json
+++ b/package.json
@@ -45,8 +45,12 @@
     "expo-build-properties": "~0.11.0",
     "expo-camera": "~14.1.3",
     "expo-font": "~11.10.2",
+    "expo-gl": "^13.6.0",
+    "expo-image-editor": "^1.7.1",
+    "expo-image-manipulator": "^11.8.0",
     "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
+    "expo-permissions": "^14.4.0",
     "expo-splash-screen": "~0.26.3",
     "expo-status-bar": "~1.11.1",
     "i18n-js": "3.9.2",
@@ -59,11 +63,15 @@
     "react-native-bouncy-checkbox": "^4.0.0",
     "react-native-drawer-layout": "4.0.0-alpha.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-crop-picker": "^0.40.3",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.19.6"
+    "react-native-view-shot": "^3.8.0",
+    "react-native-web": "~0.19.6",
+    "recoil": "^0.7.7",
+    "with-rn-image-crop-picker": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
