--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/metro-runtime": "~3.1.3",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
@@ -41,6 +41,7 @@
     "@shopify/flash-list": "1.6.3",
     "@supabase/supabase-js": "^2.42.5",
     "apisauce": "3.0.1",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^2.30.0",
     "expo": "^50.0.0",
     "expo-application": "~5.8.3",
@@ -51,6 +52,7 @@
     "expo-gl": "^13.6.0",
     "expo-image-editor": "^1.7.1",
     "expo-image-manipulator": "^11.8.0",
+    "expo-image-picker": "^14.7.1",
     "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
     "expo-permissions": "^14.4.0",
@@ -67,13 +69,19 @@
     "react-native-drawer-layout": "4.0.0-alpha.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-crop-picker": "^0.40.3",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.2",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.6",
     "recoil": "^0.7.7",
+    "uuid": "^9.0.1",
     "with-rn-image-crop-picker": "^0.2.0"
   },
   "devDependencies": {
@@ -91,6 +99,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "~18.2.14",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "babel-jest": "^29.2.1",
