--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-navigation/native-stack": "^6.0.2",
     "@shopify/flash-list": "1.6.3",
     "@supabase/supabase-js": "^2.42.5",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "apisauce": "3.0.1",
     "date-fns": "^2.30.0",
     "expo": "^50.0.0",
