--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.6.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
