--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-picker-select": "^9.1.3",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "3.10.0",
     "react-native-reanimated-carousel": "^3.5.1",
