--- a/package.json
+++ b/package.json
@@ -31,52 +31,52 @@
   },
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.2.2",
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~3.2.1",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/slider": "^4.5.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
-    "@shopify/flash-list": "1.6.3",
+    "@shopify/flash-list": "1.6.4",
     "@supabase/supabase-js": "^2.42.5",
     "@types/react-native-snap-carousel": "^3.8.11",
     "apisauce": "3.0.1",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^2.30.0",
-    "expo": "^50.0.0",
-    "expo-application": "~5.8.3",
-    "expo-av": "^13.10.6",
-    "expo-build-properties": "~0.11.0",
-    "expo-camera": "~14.1.3",
-    "expo-font": "~11.10.2",
-    "expo-gl": "^13.6.0",
+    "expo": "~51.0.4",
+    "expo-application": "~5.9.1",
+    "expo-av": "~14.0.4",
+    "expo-build-properties": "~0.12.1",
+    "expo-camera": "~15.0.7",
+    "expo-font": "~12.0.5",
+    "expo-gl": "~14.0.2",
     "expo-image-editor": "^1.7.1",
-    "expo-image-manipulator": "^11.8.0",
-    "expo-image-picker": "^14.7.1",
-    "expo-linking": "~6.2.2",
-    "expo-localization": "~14.8.3",
+    "expo-image-manipulator": "~12.0.4",
+    "expo-image-picker": "~15.0.4",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-permissions": "^14.4.0",
-    "expo-splash-screen": "~0.26.3",
-    "expo-status-bar": "~1.11.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "i18n-js": "3.9.2",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.74.1",
     "react-native-bouncy-checkbox": "^4.0.0",
     "react-native-drawer-layout": "4.0.0-alpha.1",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "^1.11.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "~3.6.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.2",
@@ -116,7 +116,7 @@
     "eslint-plugin-react-native": "4.0.0",
     "eslint-plugin-reactotron": "^0.1.2",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~51.0.1",
     "patch-package": "6.4.7",
     "postinstall-prepare": "1.0.1",
     "prettier": "2.8.8",
@@ -127,7 +127,7 @@
     "reactotron-react-native": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "5.3.2"
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": ">=18"
