--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.2.2",
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~3.2.1",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/picker": "^1.8.1",
     "@react-native-community/slider": "^4.5.2",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
@@ -44,15 +46,15 @@
     "apisauce": "3.0.1",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^2.30.0",
-    "expo": "^51.0.1",
+    "expo": "~51.0.4",
     "expo-application": "~5.9.1",
-    "expo-av": "~14.0.3",
+    "expo-av": "~14.0.4",
     "expo-build-properties": "~0.12.1",
-    "expo-camera": "~15.0.5",
+    "expo-camera": "~15.0.7",
     "expo-font": "~12.0.4",
     "expo-gl": "~14.0.2",
     "expo-image-editor": "^1.7.1",
-    "expo-image-manipulator": "~12.0.3",
+    "expo-image-manipulator": "~12.0.4",
     "expo-image-picker": "~15.0.4",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
@@ -75,11 +77,12 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-picker-select": "^9.1.3",
     "react-native-qrcode-svg": "^6.3.1",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.0.3",
