--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "expo": "~51.0.4",
     "expo-application": "~5.9.1",
     "expo-av": "~14.0.4",
+    "expo-blur": "^13.0.2",
     "expo-build-properties": "~0.12.1",
     "expo-camera": "~15.0.7",
     "expo-font": "~12.0.4",
