--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-spring/native": "^9.5.5",
+    "@react-spring/web": "^9.7.3",
     "@shopify/flash-list": "1.6.4",
     "@supabase/supabase-js": "^2.42.5",
     "@types/react-native-snap-carousel": "^3.8.11",
