--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "expo-camera": "~15.0.7",
     "expo-font": "~12.0.4",
     "expo-gl": "~14.0.2",
+    "expo-image": "^1.12.9",
     "expo-image-editor": "^1.7.1",
     "expo-image-manipulator": "~12.0.4",
     "expo-image-picker": "~15.0.4",
