--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prebuild:clean": "npx expo prebuild --clean"
   },
   "dependencies": {
+    "@expo-google-fonts/noto-serif-tc": "^0.2.3",
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/metro-runtime": "~3.2.1",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
@@ -48,14 +49,15 @@
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^2.30.0",
     "expo": "~51.0.4",
+    "expo-app-loading": "^2.1.1",
     "expo-application": "~5.9.1",
     "expo-av": "~14.0.4",
     "expo-blur": "^13.0.2",
     "expo-build-properties": "~0.12.1",
     "expo-camera": "~15.0.7",
-    "expo-font": "~12.0.4",
+    "expo-font": "~12.0.5",
     "expo-gl": "~14.0.2",
-    "expo-image": "^1.12.9",
+    "expo-image": "~1.12.9",
     "expo-image-editor": "^1.7.1",
     "expo-image-manipulator": "~12.0.4",
     "expo-image-picker": "~15.0.4",
