--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-view-shot": "^3.8.0",
+    "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.6",
     "react-tinder-card": "^1.6.4",
     "recoil": "^0.7.7",
