--- a/.maestro/Login.yaml
+++ b/.maestro/Login.yaml
@@ -3,17 +3,22 @@
 # Open up our app and use the default credentials to login
 # and navigate to the demo screen
 
-appId: com.cameraconnect # the app id of the app we want to test
+# [namwoam]: serve the web app at http://localhost:8081
+appId: http://localhost:8081 # the app id of the app we want to test
 # You can find the appId of an Ignite app in the `app.json` file
 # as the "package" under the "android" section and "bundleIdentifier" under the "ios" section
 ---
 - clearState # clears the state of our app (navigation and authentication)
 - launchApp # launches the app
 - assertVisible: "Sign In"
+- tapOn: "Email"
+- inputText: "b11705009@g.ntu.edu.tw"
+- tapOn: "Password"
+- inputText: "12345678"
 - tapOn:
     text: "Tap to sign in!"
 - assertVisible: "Your app, almost ready for launch!"
 - tapOn:
     text: "Let's go!"
-- assertVisible: "Components to jump start your project!"
+- assertVisible: "Album"
 
