dev: battle tested my ass

--- a/.maestro/Login.yaml
+++ b/.maestro/Login.yaml
@@ -16,7 +16,10 @@ appId: http://localhost:8081 # the app id of the app we want to test
 - tapOn: 
     id: "password-input"
 - inputText: "12345678"
-- scroll
+- scrollUntilVisible:
+    element:
+      text: "Tap to sign in!"
+    direction: DOWN
 - tapOn:
     text: "Tap to sign in!"
 - assertVisible: "Your app, almost ready for launch!"
